decaf-compiler/samples/lex/reserve_op.decaf.out

*** Error line 3.
int
^^^
*** syntax error

